<resources>
    <string name="app_name">Layout 1</string>
    <string name="PAM">Praktikum PAM</string>
    <string name="login">Log In</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="ok">Login</string>
    <string name="welcome">Welcome Back !</string>
    <string name="judul2">Page 2</string>
    <string name="tData">YOUR DATA</string>
    <string name="tEmail">Email :</string>
    <string name="tPassword">Password :</string>
    <string name="txemail">Your Email</string>
    <string name="txPassword">Your Password</string>
    <string name="label2">Login Success</string>
    <string name="menu1">Menu</string>
    <string name="menu2">Contact Data</string>
    <string name="ldaftar">Sign Up</string>
    <string name="enama">Name</string>
    <string name="eemail">Email</string>
    <string name="epass">Password</string>
    <string name="erepass">Repassword</string>
    <string name="ealamat">Address</string>
    <string name="lihatdata">Display Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Contact Data</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Contact</string>
    <string name="nama">Name</string>
    <string name="notel">Phone Number</string>
</resources>